[package]
name = "sp1"
version = "0.1.0"

[dependencies]
rust-kzg-bn254-verifier = { git = "https://github.com/Layr-Labs/rust-kzg-bn254", branch = "master", default-features = false }
rust-kzg-bn254-primitives = { git = "https://github.com/Layr-Labs/rust-kzg-bn254", branch = "master", default-features = false }
rust-kzg-bn254-prover = { git = "https://github.com/Layr-Labs/rust-kzg-bn254", branch = "master", default-features = false }
hokulea-cryptography = { git = "https://github.com/Layr-Labs/hokulea.git", rev = "14aad446793b1636fb7029ec6b30637baa105549"}
alloy-primitives = "0.8.21"
ark-bn254 = "0.5.0"
ark-ff = { version = "0.5.0", features = ["parallel"] }
anyhow = "1.0.95"
num = "0.4.3"